--- a/app/views/coord_plani/perfil/actualizar.html
+++ b/app/views/coord_plani/perfil/actualizar.html
@@ -127,6 +127,21 @@
 						<div class="col-md-9">
 							<div class="row">
 								<div class="col-md-12">
+									<!--=======mensaje de alerta==========-->
+								<% if(message == false) {%>
+
+								<%} else {%>
+									<div class="alert alert-danger alert-dismissible fade show" role="alert">
+							            <%= message %>
+							            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+											<span aria-hidden="true">&times;</span>
+										</button>
+							        </div>
+								<%}%>
+								<!--=======fin mensaje de alerta==========-->
+								</div>
+
+								<div class="col-md-12">
 									<div class="card">
 										<div class="card-body">
 											<div class="article border-bottom">
