--- a/app/views/coord_plani/index.html
+++ b/app/views/coord_plani/index.html
@@ -91,7 +91,7 @@
 								  	<div class="card-body">
 								    	<div class="row">
 								    		<div class="col-md-10 col-sm-10">
-								    			<h4>Ultimas Evaluaciones Planificadas</h4>	
+								    			<h4>Últimas Evaluaciones Planificadas</h4>	
 								    		</div>
 								    		<div class="col-md-2 col-sm-2 text-right">
 								    			<a href="/coord_plani/verTodas" data-toggle="tooltip" data-placement="right" title="Ver Todas"><span class="glyphicon glyphicon-log-in"></span><i class="fa fa-ellipsis-v" style="font-size: 15pt"></i></a>
@@ -154,6 +154,53 @@
 											<h3 class="display-4 text-center">Ninguna</h3>
 								    	<%}%>
 								  	</div>
+								</div>
+								<br>
+							</div>
+
+							<div class="col-md-12">
+								<div class="card">
+									<div class="card-body">
+										<div class="article border-bottom">
+											<div class="row">
+												<div class="col-md-10">
+													<h3>Últimas Noticias</h3>
+												</div>
+
+												<div class="col-md-2 text-right">
+													<a href="/coord_plani/verTodas" data-toggle="tooltip" data-placement="right" title="Ver Todas"><span class="glyphicon glyphicon-log-in"></span><i class="fa fa-ellipsis-v" style="font-size: 15pt"></i></a>
+												</div>
+											</div>
+										</div>
+										
+										<div class="row">
+											<% for(let i = 0; i < Noticias.length; i ++) {%>
+												<div class="col-md-12">
+													<div class="article border-bottom">
+														<br>
+														<div class="row">
+															<div class="col-md-3">
+																<a href="javascript:;" v-on:click="buscaEvento(<%- Noticias[i].id %>)"><img src="../../../uploads/noticias/<%=Noticias[i].urlImg%>" class="img-thumbnail" style="width: 100%" data-toggle="modal" data-target="#exampleModalCenter"/></a>
+															</div>
+
+															<div class="col-md-9">
+																<div class="row">
+																	<div class="col-md-12">
+																		<h4><%- Noticias[i].titulo %></h4>
+																	</div>
+
+																	<div class="col-md-12">
+																		<p><%- Noticias[i].resumen %></p>
+																	</div>
+																</div>
+															</div>
+														</div>
+														<br>
+													</div>
+												</div>
+											<%}%>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
