--- a/app/views/partials/coord_plani/navbar.html
+++ b/app/views/partials/coord_plani/navbar.html
@@ -25,6 +25,17 @@
 				</div>
 			</li>
 
+			<li class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			    	Noticias
+			    </a>
+					        
+				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+					<a class="dropdown-item" href="/coord_plani/agregarNoticias" disabled="true">Agregar</a>
+					<a class="dropdown-item" href="#">Ver Todas</a>
+				</div>
+			</li>
+
 			<li class="nav-item">
 			    <a class="nav-link" href="/coord_plani/actualizarDatos">Actualizar Datos <span class="sr-only">(current)</span></a>
 			</li>
