Edicion de Noticia Funcionando

--- a/app/views/index/indexPedro.html
+++ b/app/views/index/indexPedro.html
@@ -70,7 +70,7 @@
 					        </ul>   
 
 					       <div class="my-2 my-lg-0">
-						      <a href="/login">inicio sesión></a>
+						      <a href="/login" class="btn btn-primary">inicio sesión</a>
 						    </div> 
 					    </div>			
 			    	</div>
