--- a/app/views/coord_plani/index.html
+++ b/app/views/coord_plani/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 	<div id="main">
-		<div class="jumbotron" style="margin-bottom: 0px; padding: 0">
+		<div class="jumbotron text-center" style="margin-bottom: 0px; padding: 0">
 			<img src="images/index/banner-sistema.jpg" alt="Responsive image" class="img-fluid">
 		</div>	
 
@@ -142,10 +142,10 @@
 										    			</div>
 										    		</div>
 										    		<div class="col-md-2 col-sm-3 text-center" style="border-left: 1px solid #E6DFDD">
-										    			<a href="/coord_plani/editEval/<%- Evaluaciones[i].id %>" class="btn btn-warning edit-eval" data-toggle="tooltip" data-placement="right" title="Editar Evaluación">
+										    			<a href="/coord_plani/editEval/<%- Evaluaciones[i].id %>" class="btn btn-warning edit-eval btn-sm" data-toggle="tooltip" data-placement="right" title="Editar Evaluación">
 													        <span class="glyphicon glyphicon-log-in"></span><i class="fa fa-edit"></i>
 													    </a>
-										    			<a href="/coord_plani/deleteEval/<%- Evaluaciones[i].id %>" class="btn btn-danger" data-toggle="tooltip" data-placement="right" title="Eliminar Evaluación" onclick="return comprobar(<%- Evaluaciones[i].fecha_i.getDate() %>, <%- Evaluaciones[i].fecha_i.getMonth() %>);"><span class="glyphicon glyphicon-log-in"></span><i class="fa fa-remove"></i></a>
+										    			<a href="/coord_plani/deleteEval/<%- Evaluaciones[i].id %>" class="btn btn-danger btn-sm" data-toggle="tooltip" data-placement="right" title="Eliminar Evaluación" onclick="return comprobar(<%- Evaluaciones[i].fecha_i.getDate() %>, <%- Evaluaciones[i].fecha_i.getMonth() %>);"><span class="glyphicon glyphicon-log-in"></span><i class="fa fa-remove"></i></a>
 										    		</div>
 										    	</div>
 									    	<%}%>
@@ -180,13 +180,13 @@
 														<br>
 														<div class="row">
 															<div class="col-md-3">
-																<a href="javascript:;" v-on:click="buscaEvento(<%- Noticias[i].id %>)"><img src="../../../uploads/noticias/<%=Noticias[i].urlImg%>" class="img-thumbnail" style="width: 100%" data-toggle="modal" data-target="#exampleModalCenter"/></a>
+																<a href="/coord_plani/verNoticia/<%- Noticias[i].id %>"><img src="../../../uploads/noticias/<%=Noticias[i].urlImg%>" class="img-thumbnail" style="width: 100%"/></a>
 															</div>
 
 															<div class="col-md-9">
 																<div class="row">
-																	<div class="col-md-12">
-																		<h4><%- Noticias[i].titulo %></h4>
+																	<div class="col-sm-10 col-md-10">
+																		<h4><a href="/coord_plani/verNoticia/<%- Noticias[i].id %>"><%- Noticias[i].titulo %></a></h4>
 																	</div>
 
 																	<div class="col-md-12">
