--- a/app/views/coord_plani/evaluacion/planificar.html
+++ b/app/views/coord_plani/evaluacion/planificar.html
@@ -75,7 +75,7 @@
 											</div>
 											<br>
 											<fieldset v-bind:disabled="deshabilitar">
-												<form v-on:submit="checkForm()" method="post" action="/coord_plani/plani_eval">
+												<form v-on:submit="checkForm()" method="post" action="/coord_plani/plani_eval" id="plani_eval">
 													<div class="form-row">
 														<div class="form-group col-md-6">
 															<label>Personal a Evaluar:</label>
