--- a/app/views/coord_plani/noticias/agregar.html
+++ b/app/views/coord_plani/noticias/agregar.html
@@ -79,17 +79,17 @@
 												
 													<div class="form-group">
 														<label for="titulo">Titulo</label>
-														<input type="text" name="titulo" class="form-control" placeholder="Ingrese el Titulo de la Noticia" required autofocus>
+														<input type="text" name="titulo" class="form-control" placeholder="Ingrese el Titulo de la Noticia" autofocus>
 													</div>
 
 													<div class="form-group">
 														<label for="Resumen">Resumen</label>
-														<textarea class="form-control" rows="5" maxlength="400" name="resumen" placeholder="Ingrese el resumen de la noticia" required></textarea>
+														<textarea class="form-control" rows="5" maxlength="400" name="resumen" placeholder="Ingrese el resumen de la noticia"></textarea>
 													</div>
 
 													<div class="form-group">
 														<label for="Descripción">Descripción</label>
-														<textarea class="form-control" rows="10" name="descripcion" placeholder="Ingrese la descripción de la noticia" required></textarea>
+														<textarea class="form-control" rows="10" name="descripcion" placeholder="Ingrese la descripción de la noticia"></textarea>
 													</div>
 
 													<div class="form-group">
