--- a/app/views/coord_plani/perfil/actualizar.html
+++ b/app/views/coord_plani/perfil/actualizar.html
@@ -80,7 +80,7 @@
 										    </div>
 										    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
 										      <div class="card-body">
-										      	<form id="updatePass" name="updatePass" method="POST" action="/coord_plani/passwordUpdate" id="updatePass">
+										      	<form id="updatePass" name="updatePass" method="POST" action="/coord_plani/passwordUpdate">
 										        <div class="row">
 										        	<div class="col-md-12">
 										        		<div class="form-group row">
