Separando Inicios de sesion (correcto)

--- a/app/views/index/loginCrediudo.html
+++ b/app/views/index/loginCrediudo.html
@@ -61,7 +61,7 @@
 				  	</div>
 				  	
 				  	<div class="card-body">
-				  		<form id="login" name="login" method="post" action="/login">
+				  		<form id="login" name="login" method="post" action="/loginCrediudo">
 							<div class="form-group">
 								<label for="cedula">Cedula de Identidad: </label>
 								<input type="text" name="cedula" class="form-control" id="cedula" placeholder="Ingrese sus cedula de Identidad" autofocus>
@@ -77,7 +77,7 @@
 
 				  		<hr>
 
-				  		<a href="/loginCrediudo">Soy Usuario CREDIUDO</a>
+				  		<a href="/login">Soy Usuario UDO</a>
 				  	</div>
 				</div>
 			</div>
