--- a/app/views/admin/index.html
+++ b/app/views/admin/index.html
@@ -9,7 +9,7 @@
 	<script type="text/javascript" src="/js/pace.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="/css/pace-theme-center-circle.css">
 	<!-- Custom styles for this template -->
-    <link href="css/sticky-footer-navbar.css" rel="stylesheet">
+    <link href="/css/sticky-footer-navbar.css" rel="stylesheet">
 
 	
 </head>
@@ -18,7 +18,7 @@
 		<img src="images/index/banner-sistema.jpg" alt="Responsive image" class="img-fluid">
 	</div>	
 
-	<%- include('../partials/president/navbar.html') %>
+	<%- include('../partials/admin/navbar.html') %>
 
 	<div class="container-fluid">
 		<div class="row justify-content-md-center">
@@ -314,6 +314,12 @@
 			</div>
 		</div>
 	</div>
+
+	<footer class="footer" style="background: #BEBCB0;">
+		<div class="container">
+			<span class="text-muted">Pie de Pagina</span>
+		</div>
+	</footer>
 
 	<script src="/js/jquery-3.3.1.min.js"></script>
 	<script src="/js/popper.min.js"></script>
