--- a/app/views/partials/admin/navbar.html
+++ b/app/views/partials/admin/navbar.html
@@ -20,9 +20,11 @@
 					        
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 					<a class="dropdown-item" href="/admin/conocenos/creacion&mision">Creación, Misión y Propósito</a>
-					<a class="dropdown-item" href="#">Another action</a>
-					<div class="dropdown-divider"></div>
-					<a class="dropdown-item" href="#">Something else here</a>
+					<a class="dropdown-item" href="/admin/conocenos/objetivos">Objetivos</a>
+					<a class="dropdown-item" href="/admin/conocenos/funciones">Funciones</a>
+					<a class="dropdown-item" href="/admin/conocenos/subComisiones">Sub Comisiónes</a>
+					<a class="dropdown-item" href="/admin/conocenos/etapas">Etapas</a>
+					<a class="dropdown-item" href="#">Reglamentos</a>
 				</div>
 			</li>
 			      
