Renderizando en la vista para etapas de la pagina principal

--- a/app/views/partials/index/navbar.html
+++ b/app/views/partials/index/navbar.html
@@ -12,21 +12,19 @@
 			<li class="nav-item active">
 			    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
 			</li>
-			      		
-			<li class="nav-item">
-			    <a class="nav-link" href="#">Link</a>
-			</li>
 			      
 			<li class="nav-item dropdown">
 				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-			    	Dropdown
+			    	Conocenos
 			    </a>
 					        
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-					<a class="dropdown-item" href="#">Action</a>
-					<a class="dropdown-item" href="#">Another action</a>
-					<div class="dropdown-divider"></div>
-					<a class="dropdown-item" href="#">Something else here</a>
+					<a class="dropdown-item" href="#">Creación, Misión y Propósito</a>
+					<a class="dropdown-item" href="#">Objetivos</a>
+					<a class="dropdown-item" href="#">Funciones</a>
+					<a class="dropdown-item" href="#">Sub Comisiónes</a>
+					<a class="dropdown-item" href="/etapas">Etapas</a>
+					<a class="dropdown-item" href="#">Reglamentos</a>
 				</div>
 			</li>
 			      
